crates/cifmt-cli/tests/cli/test_data/cargo-check.in
    Checking test-project v0.1.0 (/example/project)
{"reason":"compiler-message","package_id":"path+file:///example/project#0.1.0","manifest_path":"/example/project/Cargo.toml","target":{"kind":["lib"],"crate_types":["lib"],"name":"test_project","src_path":"/example/project/src/lib.rs","edition":"2024","doc":true,"doctest":true,"test":true},"message":{"rendered":"error[E0425]: cannot find value `y` in this scope\n --> src/lib.rs:3:5\n  |\n3 |     y\n  |     ^ help: a local variable with a similar name exists: `x`\n\n","$message_type":"diagnostic","children":[{"children":[],"code":null,"level":"help","message":"a local variable with a similar name exists","rendered":null,"spans":[{"byte_end":47,"byte_start":46,"column_end":6,"column_start":5,"expansion":null,"file_name":"src/lib.rs","is_primary":true,"label":null,"line_end":3,"line_start":3,"suggested_replacement":"x","suggestion_applicability":"MaybeIncorrect","text":[{"highlight_end":6,"highlight_start":5,"text":"    y"}]}]}],"level":"error","message":"cannot find value `y` in this scope","spans":[{"byte_end":47,"byte_start":46,"column_end":6,"column_start":5,"expansion":null,"file_name":"src/lib.rs","is_primary":true,"label":null,"line_end":3,"line_start":3,"suggested_replacement":null,"suggestion_applicability":null,"text":[{"highlight_end":6,"highlight_start":5,"text":"    y"}]}],"code":{"code":"E0425","explanation":"An unresolved name was used.\n\nErroneous code examples:\n\n```compile_fail,E0425\nsomething_that_doesnt_exist::foo;\n// error: unresolved name `something_that_doesnt_exist::foo`\n\n// or:\n\ntrait Foo {\n    fn bar() {\n        Self; // error: unresolved name `Self`\n    }\n}\n\n// or:\n\nlet x = unknown_variable;  // error: unresolved name `unknown_variable`\n```\n\nPlease verify that the name wasn't misspelled and ensure that the\nidentifier being referred to is valid for the given situation. Example:\n\n```\nenum something_that_does_exist {\n    Foo,\n}\n```\n\nOr:\n\n```\nmod something_that_does_exist {\n    pub static foo : i32 = 0i32;\n}\n\nsomething_that_does_exist::foo; // ok!\n```\n\nOr:\n\n```\nlet unknown_variable = 12u32;\nlet x = unknown_variable; // ok!\n```\n\nIf the item is not defined in the current module, it must be imported using a\n`use` statement, like so:\n\n```\n# mod foo { pub fn bar() {} }\n# fn main() {\nuse foo::bar;\nbar();\n# }\n```\n\nIf the item you are importing is not defined in some super-module of the\ncurrent module, then it must also be declared as public (e.g., `pub fn`).\n"}}}
{"reason":"compiler-message","package_id":"path+file:///example/project#0.1.0","manifest_path":"/example/project/Cargo.toml","target":{"kind":["lib"],"crate_types":["lib"],"name":"test_project","src_path":"/example/project/src/lib.rs","edition":"2024","doc":true,"doctest":true,"test":true},"message":{"rendered":"For more information about this error, try `rustc --explain E0425`.\n","$message_type":"diagnostic","children":[],"level":"failure-note","message":"For more information about this error, try `rustc --explain E0425`.","spans":[],"code":null}}
error: could not compile `test-project` (lib) due to 1 previous error
{"reason":"build-finished","success":false}
